--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 Hello World!
-
+<img src="img/220px-Seattle_Academy_CUB_Building.jpg" alt="cub">
 
 <video width="320" height="240" controls>
   <source src="movie.mp4" type="video/mp4">
